--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="todo.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c5f6d33c0f.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="todolist_favicon">
+    <link rel="icon" href="todolist_favicon.jpg">
 </head>
 <body>
     <div class="wrapper">
